...
            </View>
          )}
        </View>

        <Pressable style={styles.shareEventBtn} onPress={handleShare} android_ripple={{ color: FreepassColors.primaryDark }}>
          <IconSymbol name="square.and.arrow.up" size={20} color={FreepassColors.white} />
          <Text style={styles.shareEventBtnText}>SHARE EVENT</Text>
        </Pressable>
      </ScrollView>
    </View>
  );
}

...
