appId: org.thefountainfund.freepass.app
name: Browse and search real resources
---
- launchApp:
    clearState: true
- assertVisible: "QUICK ACCESS"
- tapOn: ".*Resources.*"
- assertVisible: "Below are services in the FreePass directory."
- tapOn: "Search Resources..."
- inputText: "legal"
- tapOn: "Below are services in the FreePass directory."
- scrollUntilVisible:
    element: ".*Community Legal Services.*"
- tapOn:
    text: ".*Community Legal Services.*"
    index: 0
- extendedWaitUntil:
    visible: ".*DIRECTIONS.*"
    timeout: 10000
